--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,1 +1,11 @@
-<!DOCTYPE html><html><head><title>Snowball</title></head><body><div id='root'></div><script type='module' src='/main.jsx'></script></body></html>
+<!DOCTYPE html>
+<html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Snowball</title>
+</head>
+<body><div id='root'></div>
+<script type='module' src='/main.jsx'>
+</script>
+</body>
+</html>
